@@ -1,3 +1,7 @@
+2015-06-15  Carl Hetherington  <cth@carlh.net>
+
+	* Select newly-added content (#455).
+
 2015-06-14  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.1.3 released.
